repository/package/skin/src/main/webapp/screen.css
/* ... */
.hippo-editor .hippo-preview-document .hippo-editor-field{font-size: 12px; line-height: 18px; font-family: arial,sans-serif,helvetica; background: white}
.hippo-preview-document .hippo-editor-field h3.hippo-editor-field-title span{font-size: 11px;}
.hippo-preview-document div.odd  .hippo-editor-field {background: white; border-bottom: 1px dotted #afafaf}
.hippo-preview-document div.even .hippo-editor-field {background: white; border-bottom: 1px dotted #afafaf}
.hippo-preview-document .hippo-template-default-title span{font-size: 18px}
.hippo-preview-document .hippo-editor-field-textarea{min-height: 150px}
.hippo-editor .hippo-preview-document .hippo-editor-field .hippo-editor-field-subfield{background-image: none}

/* Editor Plugin */
/* ================================================ */
/* default background when nothing is selected */
.hippo-tabs-documents .tabbed-panel-layout-center{background: #f4f4f4 url("images/hippo-editor-default-back.png") no-repeat center center} 
.hippo-editor{padding:0px; background: white; border: 1px solid #afafaf; border-top: none; border-left: none;}
.hippo-editor-top{background: transparent url("images/editor-back.png") repeat-x}
.hippo-editor-top .hippo-toolbar{padding-left: 4px}

.hippo-editor-template-editor{padding-top: 4px; background: white url("images/hippo-shade.png"); padding-left: 4px;}

.hippo-editor-template-editor .even .hippo-editor-field{background: #f0f6ff}
.hippo-editor-template-editor .odd .hippo-editor-field{background: #cee3f9}
.hippo-editor {background: transparent url("images/hippo-shade.png")}

/* feedback styling */
.hippo-editor-feedback {width: 70%; margin: 0px 10px; padding: 0px 20px;}
.hippo-editor-feedback ul {margin-top: 5px; margin-bottom: 5px; padding-top: 5px; padding-bottom: 5px;}
.hippo-editor-feedback li {height: 20px; padding: 5px 40px;}
.hippo-editor-feedback .feedbackPanelERROR {display: list-item; background-color: #c00;}

/* field styling */
.hippo-editor-field{padding: 8px; margin-bottom: 0px; }
.hippo-editor-field-title{font-size: 11px; font-weight: bold; color: #666666; margin-bottom: 8px;}

/* Text Input elements */
.hippo-window-form input,
.hippo-picker-properties input,
.hippo-editor-field textarea,
.hippo-editor-field select,
.hippo-editor-field input,
.hippo-editor-field-input{
font-size: 12px; line-height: 18px; background: transparent; border: none; color: #333333; margin: 2px; font-family: arial,sans-serif,helvetica;}
.hippo-editor-field input, .hippo-editor-field-input{width: 100%}

.hippo-editor-field input[type="checkbox"]{width: auto;}
.hippo-editor-field input[type="submit"]{width: auto; background: none;}

/* link pickers plugin */
.hippo-editor-linkpicker-link a{display: block; padding: 4px;}
.hippo-editor-linkpicker-link a:hover{background-color: #f2f2f2}

.hippo-gallery-field-picker{width: 100%}
.hippo-editor .hippo-editor-threepane .hippo-gallery-field-picker tr td{vertical-align: middle}

/* date widget */
.hippo-editor-field .hippo-editor-field-datepicker input{width: 80px}
.hippo-editor-field .hippo-editor-field-datepicker input.time { border: 1px solid #e3e3e3; width: 30px; padding: 2px;}
.hippo-editor-field .hippo-editor-field-datepicker span.yui-skin-sam { margin-right: 15px; }
.hippo-editor-field .hippo-editor-field-datepicker input.today { border: 1px solid #e3e3e3; width: auto; padding: 2px; margin: 0px; }

.hippo-editor-field .hippo-editor-field-datepicker select{width: 70px}

/* Xinha xml editor used in the hippo-editor-field-html plugin */

.hippo-editor-field-html{background: url("images/hippo-border.gif") repeat-x 0px 30px; padding: 4px;}
.hippo-editor-field-html .htmlarea {background: transparent; border: 0px solid white; border-collapse: separate}
.hippo-editor-field-html .htmlarea *{padding: 0px; margin: 0px; border: none;}
/* hide the xinha status bar we don't need it */
.hippo-editor-field-html .htmlarea .statusBar{display: none}
.hippo-editor-field-html .htmlarea tr td{vertical-align: top;}
.hippo-editor-field-html .htmlarea tr td select{margin-top: 2px; font-size: 11px;}
.hippo-editor-field-html .htmlarea .toolbar {background: white; border: none; border-bottom: 0px solid #B2B2B2; padding:0px; padding-bottom: 2px}
.hippo-editor-field-html .htmlarea .toolbar .button{background: none; border: none}
.hippo-editor-field-html .htmlarea .toolbar a.button:hover {border:1px solid #335500; padding:0;}
.hippo-editor-field-html .htmlarea .toolbar select{background: white; border: 1px solid #e3e3e3;}
.hippo-editor-field-html .htmlarea .toolbar select option{padding: 1px; background: transparent}
.hippo-editor-field-html .htmlarea .toolbar div{margin-bottom:0px;padding:0px;margin: 0px;}
.hippo-editor-field-html .htmlarea .xinha_iframe {margin-top: 3px;}
.hippo-editor-field-html .htmlarea .xinha_fullscreen {margin-top: 0px; border: 1px solid #e3e3e3;}

/* Xinha modal windows */
/*div.wicket-modal div.link-picker select { margin-bottom:10px;}
div.wicket-modal div.link-picker div.internal-link-label {margin-bottom: 10px;}
div.wicket-modal div.link-picker table {background-color: #e3e3e3;}
*/
div.wicket-modal div.wicket-tree {border: 0px;}

/* select layout wizard step */
.create-type-select-layout td {text-align: center; height: 80px;}
.create-type-select-layout .selected {background-color: #ccc;}

/* field template editing */
.hippo-editor-template-field {padding: 2px; background-color: #bbb;}
.hippo-editor-template-field-controls {height: 20px; padding-left: 5px; padding-right: 5px; background-color: white;}
.active .hippo-editor-template-field-controls {background-color: #fedc89;}
.hippo-editor-template-field-controls ul {float: right;}
.hippo-editor-template-field-controls li {display: inline; }
.hippo-editor-template-field-controls li a {float: left; display:block; background-position: center center; width: 16px; height: 16px;}
.hippo-editor-template-field-controls li a:hover {background-color: white; }
.hippo-editor-template-field-controls .delete-16 {width: 49px; float: right;}
/* ... */

